2006-08-12 11:38  ntiffin

	* ChangeLog, Connection.m, Databases.m, ExplorerModel.m,
	  ExplorerNode.m, Field.m, Fields.m, RecordSet.m, Schema.m,
	  Table.m: More memory cleanup.

2006-08-11 13:01  ntiffin

	* ChangeLog, Connection.h, Connection.m, DataSource.m, Database.m,
	  Databases.m, ExplorerModel.m, ExplorerNode.m, Field.m, Fields.m,
	  Record.h, Record.m, RecordSet.m, Table.m: Fix a number of memory
	  issues.

2006-07-16 18:13  ntiffin

	* ChangeLog, Connection.h, Connection.m, ExplorerModel.m,
	  ExplorerNode.h, ExplorerNode.m, Schema.h, Schema.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Add color to Explorer View, add
	  index count function.

2006-06-24 11:16  ntiffin

	* Connection.h, Connection.m, ExplorerModel.m, Schema.m: Add SQL
	  log functions, correct bug in schema dealloc.

2006-06-21 06:47  ntiffin

	* ChangeLog: Test commits mail list.

2006-06-20 11:26  ntiffin

	* ChangeLog, Schema.m, UnitTest/pgCocoaDBSchemaTest.m: Update for
	  better round trip function processing.

2006-06-17 18:03  ntiffin

	* Connection.h, Connection.m: Add query cancel function.

2006-06-10 13:43  ntiffin

	* ChangeLog: Update ChangeLog.

2006-06-02 12:27  ntiffin

	* ChangeLog, Connection.m, Schema.m: Correct empty options log
	  item, and syntax error.

2006-06-02 06:48  ntiffin

	* ChangeLog, ExplorerModel.m, Schema.h, Schema.m,
	  UnitTest/pgCocoaDBSchemaTest.m: Correct missing setBaseSchema,
	  add view column schema collection, add getRuleSQLFromSchema(),
	  improve getFunctionSQLFromSchema().

2006-05-22 20:25  ntiffin

	* Connection.m, Schema.m: Correct errors encountered during
	  debuging querytool.

2006-05-13 13:09  ntiffin

	* ChangeLog: Update ChangeLog.

2006-05-13 13:04  ntiffin

	* ChangeLog, ExplorerModel.h, ExplorerModel.m, ExplorerNode.h,
	  ExplorerNode.m: More tweeks to get Explorer working with
	  QueryTool. Re-sync after sourceforge cvs outage.

2006-05-07 12:32  ntiffin

	* ChangeLog, DataSource.m, Databases.m, ExplorerModel.h,